<?xml version="1.0" encoding="utf-8"?>
<com.kdt.DefocusableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/profile_type_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/fragment_padding_medium"
        android:paddingTop="@dimen/padding_extra_large"
        android:paddingBottom="@dimen/padding_extra_large">

        <TextView
            android:id="@+id/profile_type_header"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_profile_title"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/profile_type_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:gravity="center"
            android:text="@string/create_profile_subtitle"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_11ssp" />

        <LinearLayout
            android:id="@+id/vanilla_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_extra_large"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/title_textview"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_profile_vanilla_like_versions"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/create_profile_vanilla_hint"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_10ssp" />

            <View
                android:id="@+id/view"
                style="@style/ThickDivider"
                android:layout_marginTop="@dimen/padding_large" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/vanilla_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/create_profile_vanilla"
                android:textSize="@dimen/_13ssp" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/optifine_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_heavy"
                android:text="@string/create_profile_optifine"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/modded_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@drawable/background_card"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/title_modded_textview"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_profile_modded_versions"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:text="@string/create_profile_modded_hint"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_10ssp" />

            <View
                android:id="@+id/view_modded"
                style="@style/ThickDivider"
                android:layout_marginTop="@dimen/padding_large" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/modded_profile_fabric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/modloader_dl_install_fabric"
                android:textSize="@dimen/_13ssp" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/modded_profile_quilt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_heavy"
                android:text="@string/modloader_dl_install_quilt"
                android:textSize="@dimen/_13ssp" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/modded_profile_forge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_heavy"
                android:text="@string/modloader_dl_install_forge"
                android:textSize="@dimen/_13ssp" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/modded_profile_neoforge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_heavy"
                android:text="@string/modloader_dl_install_neoforge"
                android:textSize="@dimen/_13ssp" />

            <com.kdt.mcgui.MineButton
                android:id="@+id/modded_profile_modpack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_heavy"
                android:text="@string/modpack_install_button"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </LinearLayout>
</com.kdt.DefocusableScrollView>
